--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>SaCode</h1>
     <p>Belajar Membuat Halaman Konten Produk.</p>
+    <a href="prodak.html">Lihat Produk html</a>
 </body>
 </html>
